2005-02-22  Christian Neumair  <chris@gnome-de.org>

	* *: Checked into CVS with slight code fixes.

== 0.1 "Tarball Lost" Release ==

2004-05-09  Christian Neumair  <chris@gnome-de.org>

	* *: Initial release.