@@ -1,0 +1,3 @@
+2005-02-22  Christian Neumair  <chris@gnome-de.org>
+
+	* de.po: Updated German translation.
